--- a/FaithConnect/Views/Shared/_AdminLayout.cshtml
+++ b/FaithConnect/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,6 @@
 ﻿@model FaithConnect.Repository.ManageAccountViewModel
+@using FaithConnect.ViewModel
+
 @{
     var userInfo = Model.UserInformation;
     string profileImage = string.IsNullOrEmpty(userInfo.Image.FirstOrDefault()?.imageFile) ? Url.Content("~/UploadedFiles/default.png") : Url.Content("~/UploadedFiles/" + userInfo.Image.FirstOrDefault()?.imageFile);
@@ -126,7 +128,7 @@
                     </button>
                 </div>
                 <!-- End Logo Header -->
-            </div>
+            </div>          
             <nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
                 <div class="container-fluid">
                     <nav class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex">
@@ -151,7 +153,19 @@
                                     </div>
                                 </form>
                             </ul>
-                        </li>                 
+                        </li>   
+                        @{
+                            var notifications = ViewBag.Notifications as List<notificationViewModel>;
+
+                            int unreadCount = 0;
+
+                            if (notifications != null)
+                            {
+                                // Explicitly check if isRead is false
+                                unreadCount = notifications.Count(n => n.Notification.isRead == false);
+                            }
+                        }
+        
                         <li class="nav-item topbar-icon dropdown hidden-caret">
                             <a class="nav-link dropdown-toggle"
                                href="#"
@@ -161,67 +175,63 @@
                                aria-haspopup="true"
                                aria-expanded="false">
                                 <i class="fa fa-bell"></i>
-                                <span class="notification">4</span>
+                            @if (unreadCount > 0)
+                            {
+                                <span class="notification">@unreadCount</span>
+
+                            }
                             </a>
                             <ul class="dropdown-menu notif-box animated fadeIn"
                                 aria-labelledby="notifDropdown">
                                 <li>
                                     <div class="dropdown-title">
-                                        You have 4 new notification
+                                        You have @unreadCount new notification
                                     </div>
                                 </li>
+                                @functions {
+                                    private string GetTimeAgo(DateTime? dateTime)
+                                    {
+                                        if (!dateTime.HasValue)
+                                            return "just now";
+
+                                        var ts = DateTime.Now - dateTime.Value;
+                                        double delta = ts.TotalSeconds;
+                                        if (delta < 0) return "just now";
+                                        if (delta < 60) return ts.Seconds == 1 ? "1 second ago" : ts.Seconds + " seconds ago";
+                                        if (delta < 120) return "1 minute ago";
+                                        if (delta < 3600) return ts.Minutes + " minutes ago";
+                                        if (delta < 7200) return "1 hour ago";
+                                        if (delta < 86400) return ts.Hours + " hours ago";
+                                        if (delta < 172800) return "yesterday";
+                                        if (delta < 2592000) return ts.Days + " days ago";
+                                        if (delta < 31104000)
+                                        {
+                                            int months = Convert.ToInt32(Math.Floor((double)ts.Days / 30));
+                                            return (months <= 1) ? "1 month ago" : months + " months ago";
+                                        }
+
+                                        int years = Convert.ToInt32(Math.Floor((double)ts.Days / 365));
+                                        return (years <= 1) ? "1 year ago" : years + " years ago";
+                                    }
+                                }
                                 <li>
                                     <div class="notif-scroll scrollbar-outer">
                                         <div class="notif-center">
+                                        @foreach (var notifVm in ViewBag.Notifications as List<notificationViewModel>)
+                                        {
                                             <a href="#">
                                                 <div class="notif-icon notif-primary">
-                                                    <i class="fa fa-user-plus"></i>
+                                                    <img src="@notifVm.AvatarUrl" class="rounded-circle" style="width: 45px; height: 45px; object-fit: cover"/>
                                                 </div>
                                                 <div class="notif-content">
-                                                    <span class="block"> New user registered </span>
-                                                    <span class="time">5 minutes ago</span>
+                                                    <span class="block">@notifVm.Notification.message</span>
+                                                    <span class="time">@GetTimeAgo(notifVm.Notification.date)</span>
                                                 </div>
                                             </a>
-                                            <a href="#">
-                                                <div class="notif-icon notif-success">
-                                                    <i class="fa fa-comment"></i>
-                                                </div>
-                                                <div class="notif-content">
-                                                    <span class="block">
-                                                        Rahmad commented on Admin
-                                                    </span>
-                                                    <span class="time">12 minutes ago</span>
-                                                </div>
-                                            </a>
-                                            <a href="#">
-                                                <div class="notif-img">
-                                                    <img src="~/Assets/Admin/img/profile2.jpg"
-                                                         alt="Img Profile" />
-                                                </div>
-                                                <div class="notif-content">
-                                                    <span class="block">
-                                                        Reza send messages to you
-                                                    </span>
-                                                    <span class="time">12 minutes ago</span>
-                                                </div>
-                                            </a>
-                                            <a href="#">
-                                                <div class="notif-icon notif-danger">
-                                                    <i class="fa fa-heart"></i>
-                                                </div>
-                                                <div class="notif-content">
-                                                    <span class="block"> Farrah liked Admin </span>
-                                                    <span class="time">17 minutes ago</span>
-                                                </div>
-                                            </a>
+                                        }  
                                         </div>
                                     </div>
-                                </li>
-                                <li>
-                                    <a class="see-all" href="javascript:void(0);">
-                                        See all notifications<i class="fa fa-angle-right"></i>
-                                    </a>
-                                </li>
+                                </li>                               
                             </ul>
                         </li>                       
                         <li class="nav-item topbar-user dropdown hidden-caret">
@@ -250,15 +260,15 @@
                                             </div>
                                             <div class="u-text">
                                                 <h4>@userInfo.first_name</h4>
-                                                <p class="text-muted">hello@example.com</p>
-                                                <a href="profile.html"
-                                                   class="btn btn-xs btn-secondary btn-sm">View Profile</a>
+                                                <p class="text-muted">@userInfo.email</p>
+                                                @*<a href="profile.html"
+                                                   class="btn btn-xs btn-secondary btn-sm">View Profile</a>*@
                                             </div>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">My Profile</a>
+                                        @*<div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#">My Profile</a>*@
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="~/Home/Logout">Logout</a>
                                     </li>
