--- a/FaithConnect/Views/Shared/_Layout.cshtml
+++ b/FaithConnect/Views/Shared/_Layout.cshtml
@@ -90,30 +90,7 @@
                     </div>
                     <!-- main menu dd -->
                     <ul class="dropdown-menu border-0 shadow p-3 overflow-auto" aria-labelledby="mainMenu" style="width: 23em; max-height: 600px">
-                        <div>
-                            <li class="p-1 mx-2">
-                                <h2>Create</h2>
-                            </li>
-                            <li class="my-2 p-1">
-                                <a href="#" class="text-decoration-none text-dark d-flex align-items-center">
-                                    <div class="rounded-circle bg-gray p-1 d-flex align-items-center justify-content-center me-3" style="width: 38px; height: 38px">
-                                        <i class="fas fa-edit"></i>
-                                    </div>
-                                    <div>
-                                        <p class="m-0">Post</p>
-                                    </div>
-                                </a>
-                            </li>                            
-                            <li class="my-2 p-1">
-                                <a href="#" class="text-decoration-none text-dark d-flex align-items-center">
-                                    <div class="rounded-circle bg-gray p-1 d-flex align-items-center justify-content-center me-3" style="width: 38px; height: 38px">
-                                        <i class="fas fa-video"></i>
-                                    </div>
-                                    <div>
-                                        <p class="m-0">Video</p>
-                                    </div>
-                                </a>
-                            </li>
+                        <div>              
                             <hr />                           
                             <li class="my-2 p-1">
                                 <a href="~/Home/Group" class="text-decoration-none text-dark d-flex align-items-center">
@@ -163,7 +140,7 @@
                             <span style="position: absolute;
                                   bottom: -3px;
                                   right: -6px;
-                                  background-color: #dc3545;
+                                  background-color: #dc3545; 
                                   color: white;
                                   font-size: 0.75rem;
                                   font-weight: bold;
@@ -447,6 +424,7 @@
 </body>
 </html>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/Assets/Index/js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script>
