--- a/FaithConnect/Views/Admin/ManageGroups.cshtml
+++ b/FaithConnect/Views/Admin/ManageGroups.cshtml
@@ -73,9 +73,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.description)</td>
                                             <td>@Html.DisplayFor(modelItem => item.groupAdmin)</td>
                                             <td>
-                                                <a class="btn btn-warning btn-sm" href="javascript:void(0);" onclick="openEditModal(@item.id)">
-                                                    <i class="fas fa-edit"></i> Edit
-                                                </a>
+                                                
                                                 <form action="@Url.Action("DeleteGroup", new { id = item.id })" method="post" style="display:inline;">
                                                     <button type="submit" class="btn btn-danger btn-sm">
                                                         <i class="fas fa-trash"></i> Delete
@@ -119,7 +117,7 @@
                                                         <i class="fas fa-trash"></i> Approve
                                                     </button>
                                                 </form>
-                                                <form action="@Url.Action("DeleteGroup", new { id = item.id })" method="post" style="display:inline;">
+                                                <form action="@Url.Action("RejectGroup", new { id = item.id })" method="post" style="display:inline;">
                                                     <button type="submit" class="btn btn-danger btn-sm">
 
                                                         <i class="fas fa-trash"></i> reject
